# Async-Smart-Order-Router

./: README.md
FixGateway/FixGateway/: CMakeLists.txt  CMakeSettings.json
FixGateway/FixGateway/FixGateway/: CMakeLists.txt  FixGateway.cpp  FixGateway.h  FixGatewayData.cpp  FixGatewayData.h  MsgBus.cpp  MsgBus.h  PreHeader.h  Server.cpp  Server.h  Session.cpp  Session.h  User.cpp  User.h  UserFactory.cpp  UserFactory.h  UserManager.cpp  UserManager.h
FixGateway/FixGateway/FixGateway/util/: UtilString.cpp  UtilString.h
MarketConnect/MarketConnect/: CMakeLists.txt
MarketConnect/MarketConnect/MarketConnect/: CMakeLists.txt  MarketConnect.cpp  MarketConnect.h
MarketGateway/: CMakeLists.txt
MarketGateway/MarketGateway/: Factory_handle_market_type.h  Factory_handle_market_type_a.h  Gateway.cpp  MarketGateway.cpp  MarketGateway.h  MarketVenueClient.h  MarketVenueClient_context_pool.cpp
MarketGateway/MarketGateway/MarketGateway/: CMakeLists.txt  Gateway.h  Handler.h  Handler_SOR_order.cpp  Handler_SOR_order.h  MarketVenueClient.cpp  MarketVenueClient_context_pool.h  MsgBus.h  MshBus.cpp  PreHeader.h  PreHeaderMsgBus.h
MarketGateway/MarketGateway/MarketGateway/libs/hffix/: hffix.hpp
MarketGateway/MarketGateway/MarketGateway/libs/libcuckoo/: cuckoohash_map.hh
MarketGateway/MarketGateway/schemas/: order_sor_mg_generated.h
SOR/SOR/: CMakeLists.txt  CMakeSettings.json
SOR/SOR/SOR/: CMakeLists.txt  Handler.h  HandlerMarketData.cpp  HandlerMarketData.h  HandlerOrder.cpp  HandlerOrder.h  MarketData.h  MarketEntity.cpp  MarketEntity.h  MarketSymbolData.cpp  MarketSymbolData.h  MarketVenue.cpp  MarketVenue.h  MarketsData.cpp  MarketsData.h  MsgBus.h  MshBus.cpp  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  PreHeaderMsgBus.h  SOR.cpp  SOR.h  User.cpp  User.h  Utils.h
SOR/SOR/SOR/libs/libcuckoo/: cuckoohash_config.hh
SOR/SOR/SOR/schemas/: order_fixg_sor_generated.h  order_generated.h
Schema/: feed_market_data.fbs  order.fbs  order_fixg_sor.fbs  order_generated.h  order_sor_mg.fbs
Sim/FeedHandler/: CMakeLists.txt
Sim/FeedHandler/FeedHandler/: CMakeLists.txt  FeedHandler.cpp  FeedHandler.h  MsgBus.h
Sim/FeedHandler/FeedHandler/schemas/: feed_market_data_generated.h
